...
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "물체 등록 및 가구 배치" } }
      }
    },
    "query.registerObject" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Remember an object location" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "물체 위치 직접 등록" } }
      }
    },
    "query.retryRoute" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Check route again" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "경로 다시 확인" } }
...
